--- a/app/views/main.html
+++ b/app/views/main.html
@@ -50,92 +50,15 @@
 
   <div class="visualize">
     <div class="visualize-tagline">
-      <h2><span class="emphasize">"Visualize</span> the crowd and learn the best</h2>
-      <h2>times to go to your favorite places."</h2>
+      <h3><span class="emphasize">"Visualize</span> the crowd and learn the best times to go to your favorite places."</h3>
     </div>
 
     <div class="crowd-factor">
-      <h4 class="current-time">Current Time: <span class="time">Tuesday, 11am</span></h4>
+      <h3 class="location">Cream - Palo Alto, CA</h3>
+      <h4 class="current-time">Current Time: <span class="time">Tuesday, 12pm</span></h4>
       <h5 class="watch-count">73 Watchers</h5>
-      <button type="button" class="btn">Add Herd Watch</button>
+      <button type="button" class="btn">Add Crowd Watch</button>
       <div class="crowd-visuals">
-        <div class="timeslot">
-          <h5 class="block-day">afternoon</h5>
-          <table class="morning-table">
-            <tr>
-              <th></th>
-              <th>11</th>
-              <th>12</th>
-              <th>1</th>
-              <th>2</th>
-              <th>3</th>
-              <th>4</th>
-            </tr>
-            <tr class="monday-row">
-              <td>M</td>
-              <td class="closed-square"></td>
-              <td class="empty-square"></td>
-              <td class="empty-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-            </tr>
-            <tr class="tuesday-row">
-              <td>Tu</td>
-              <td class="closed-square"></td>
-              <td class="empty-square"></td>
-              <td class="empty-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-            </tr>
-            <tr class="wednesday-row">
-              <td>W</td>
-              <td class="closed-square"></td>
-              <td class="empty-square"></td>
-              <td class="empty-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-            </tr>
-            <tr class="thursday-row">
-              <td>Th</td>
-              <td class="closed-square"></td>
-              <td class="empty-square"></td>
-              <td class="empty-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-            </tr>
-            <tr class="friday-row">
-              <td>F</td>
-              <td class="closed-square"></td>
-              <td class="empty-square"></td>
-              <td class="empty-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-            </tr>
-            <tr class="saturday-row">
-              <td>Sa</td>
-              <td class="ave-square"></td>
-              <td class="crowded-square"></td>
-              <td class="crowded-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-            </tr>
-            <tr class="sunday-row">
-              <td>Su</td>
-              <td class="ave-square"></td>
-              <td class="crowded-square"></td>
-              <td class="crowded-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-              <td class="herd-square"></td>
-            </tr>
-          </table>
-        </div>
         <div class="timeslot">
           <h5 class="block-day">afternoon</h5>
           <table class="afternoon-table">
@@ -150,66 +73,66 @@
             </tr>
             <tr class="monday-row">
               <td>M</td>
+              <td class="closed-square"></td>
               <td class="empty-square"></td>
-              <td class="few-square"></td>
-              <td class="average-square"></td>
+              <td class="empty-square"></td>
               <td class="herd-square"></td>
               <td class="herd-square"></td>
-              <td class="crowded-square"></td>
+              <td class="herd-square"></td>
             </tr>
             <tr class="tuesday-row">
               <td>Tu</td>
+              <td class="closed-square"></td>
               <td class="empty-square"><img class="marker" src="../images/star-icon.png"></td>
-              <td class="few-square"></td>
-              <td class="crowded-square"></td>
+              <td class="empty-square"></td>
               <td class="herd-square"></td>
-              <td class="crowded-square"></td>
-              <td class="crowded-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
             </tr>
             <tr class="wednesday-row">
               <td>W</td>
-              <td class="few-square"></td>
-              <td class="average-square"></td>
-              <td class="crowded-square"></td>
+              <td class="closed-square"></td>
+              <td class="empty-square"></td>
+              <td class="empty-square"></td>
               <td class="herd-square"></td>
               <td class="herd-square"></td>
-              <td class="crowded-square"></td>
+              <td class="herd-square"></td>
             </tr>
             <tr class="thursday-row">
               <td>Th</td>
+              <td class="closed-square"></td>
               <td class="empty-square"></td>
-              <td class="few-square"></td>
-              <td class="average-square"></td>
+              <td class="empty-square"></td>
               <td class="herd-square"></td>
-              <td class="crowded-square"></td>
+              <td class="herd-square"></td>
               <td class="herd-square"></td>
             </tr>
             <tr class="friday-row">
               <td>F</td>
-              <td class="average-square"></td>
-              <td class="few-square"></td>
-              <td class="crowded-square"></td>
+              <td class="closed-square"></td>
+              <td class="empty-square"></td>
+              <td class="empty-square"></td>
               <td class="herd-square"></td>
               <td class="herd-square"></td>
-              <td class="crowded-square"></td>
+              <td class="herd-square"></td>
             </tr>
             <tr class="saturday-row">
               <td>Sa</td>
               <td class="average-square"></td>
               <td class="crowded-square"></td>
+              <td class="crowded-square"></td>
               <td class="herd-square"></td>
-              <td class="crowded-square"></td>
-              <td class="crowded-square"></td>
-              <td class="crowded-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
             </tr>
             <tr class="sunday-row">
               <td>Su</td>
-              <td class="few-square"></td>
-              <td class="average-square"></td>
               <td class="average-square"></td>
               <td class="crowded-square"></td>
               <td class="crowded-square"></td>
-              <td class="average-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
             </tr>
           </table>
         </div>
@@ -227,63 +150,140 @@
             </tr>
             <tr class="monday-row">
               <td>M</td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+            </tr>
+            <tr class="tuesday-row">
+              <td>Tu</td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+            </tr>
+            <tr class="wednesday-row">
+              <td>W</td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+            </tr>
+            <tr class="thursday-row">
+              <td>Th</td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+            </tr>
+            <tr class="friday-row">
+              <td>F</td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+            </tr>
+            <tr class="saturday-row">
+              <td>Sa</td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+            </tr>
+            <tr class="sunday-row">
+              <td>Su</td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+            </tr>
+          </table>
+        </div>
+        <div class="timeslot">
+          <h5 class="block-day">latenight</h5>
+          <table class="latenight-table">
+            <tr>
+              <th></th>
+              <th>11</th>
+              <th>12</th>
+              <th>1</th>
+              <th>2</th>
+              <th>3</th>
+              <th>4</th>
+            </tr>
+            <tr class="monday-row">
+              <td>M</td>
               <td class="crowded-square"></td>
-              <td class="average-square"></td>
-              <td class="few-square"></td>
-              <td class="empty-square"></td>
+              <td class="closed-square"></td>
+              <td class="closed-square"></td>
+              <td class="closed-square"></td>
               <td class="closed-square"></td>
               <td class="closed-square"></td>
             </tr>
             <tr class="tuesday-row">
               <td>Tu</td>
               <td class="crowded-square"></td>
-              <td class="average-square"></td>
-              <td class="few-square"></td>
-              <td class="empty-square"></td>
+              <td class="closed-square"></td>
+              <td class="closed-square"></td>
+              <td class="closed-square"></td>
               <td class="closed-square"></td>
               <td class="closed-square"></td>
             </tr>
             <tr class="wednesday-row">
               <td>W</td>
               <td class="crowded-square"></td>
-              <td class="average-square"></td>
-              <td class="few-square"></td>
-              <td class="empty-square"></td>
+              <td class="closed-square"></td>
+              <td class="closed-square"></td>
+              <td class="closed-square"></td>
               <td class="closed-square"></td>
               <td class="closed-square"></td>
             </tr>
             <tr class="thursday-row">
               <td>Th</td>
-              <td class="crowded-square"></td>
-              <td class="average-square"></td>
-              <td class="few-square"></td>
-              <td class="few-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="closed-square"></td>
               <td class="closed-square"></td>
               <td class="closed-square"></td>
             </tr>
             <tr class="friday-row">
               <td>F</td>
-              <td class="crowded-square"></td>
-              <td class="average-square"></td>
-              <td class="few-square"></td>
-              <td class="few-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="closed-square"></td>
               <td class="closed-square"></td>
               <td class="closed-square"></td>
             </tr>
             <tr class="saturday-row">
               <td>Sa</td>
-              <td class="crowded-square"></td>
-              <td class="few-square"></td>
-              <td class="few-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
               <td class="closed-square"></td>
               <td class="closed-square"></td>
               <td class="closed-square"></td>
             </tr>
             <tr class="sunday-row">
               <td>Su</td>
-              <td class="average-square"></td>
-              <td class="few-square"></td>
-              <td class="few-square"></td>
+              <td class="crowded-square"></td>
+              <td class="closed-square"></td>
+              <td class="closed-square"></td>
               <td class="closed-square"></td>
               <td class="closed-square"></td>
               <td class="closed-square"></td>
@@ -296,17 +296,17 @@
             <div class="empty">
               <div class="empty-square color">
               </div>
-              <h5>Almost Empty</h5>
+              <h5>Empty</h5>
             </div>
             <div class="average">
               <div class="average-square color">
               </div>
-              <h5>Average Traffic</h5>
+              <h5>Average</h5>
             </div>
             <div class="herd">
               <div class="herd-square color">
               </div>
-              <h5>Herd Alert</h5>
+              <h5>Packed</h5>
             </div>
             <div class="none">
               <div class="none-square color">
@@ -319,7 +319,7 @@
             <div class="few">
               <div class="few-square color">
               </div>
-              <h5>A Few People</h5>
+              <h5>Few</h5>
             </div>
             <div class="crowded">
               <div class="crowded-square color">
