Beginning responsive design.

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -54,7 +54,7 @@
     </div>
 
     <div class="crowd-factor">
-      <h3 class="location">Cream - Palo Alto, CA</h3>
+      <h3 class="location-name">Cream</h3> <h4 class="location-place"> - Palo Alto, CA</h4>
       <h4 class="current-time">Current Time: <span class="time">Tuesday, 12pm</span></h4>
       <h5 class="watch-count">73 Watchers</h5>
       <button type="button" class="btn">Add Crowd Watch</button>
