--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -43,6 +43,10 @@ $page-width: 940px;
 $page-radius: 10px;
 $hr-width: $page-width - $page-radius;
 
+// Responsive
+$break-small: 500px;
+//$break-large: 1200px;
+
 
 /******************
 *** MIXINS
@@ -298,6 +302,13 @@ input[type='text']:focus {
   color: red !important;
 }
 
+// Responsive
+@media screen and (max-width: $break-small){
+  .container {
+    width: 100% !important;
+  }
+}
+
 /******************
 *** NAVBAR
 *******************/
@@ -314,25 +325,8 @@ input[type='text']:focus {
   padding: 0;
 
   .brand {
-    color: $comp2-dark;
     margin-left: -8px;
     margin-top: -15px;
-
-    .letter-b {
-      color: $comp1-dark;
-    }
-
-    .num-four {
-      color: $high-bright;
-    }
-
-    &:hover {
-      color: $cf-few;
-
-      .num-four, .letter-b {
-        color: $cf-few;
-      }
-    }
   }
 
   .login > ul{
@@ -363,6 +357,51 @@ input[type='text']:focus {
   .signout:hover {
     cursor: pointer;
   }
+
+  .search-icon {
+    display: none;
+    height: 25px;
+    width: 25px;
+    margin: -5px 0 0 5px;
+    &:hover {
+      cursor: pointer;
+    }
+  }
+}
+
+@media screen and (max-width: $break-small){
+  .navbar-inner {
+    width: 100%;
+    height: 110px;
+    text-align: center;
+
+    .login {
+      display: block;
+      width: 100%;
+
+      ul {
+        float: none !important;
+        //margin-top: 45px;
+        //margin-left: 27%;
+        width: 50%;
+        margin: 45px auto 0 auto !important;
+      }
+    }
+    form {
+      width: 100%
+    }
+    .brand {
+      width: 100%;
+      margin-left: -20px;
+      margin-bottom: 10px;
+    }
+    .search-icon {
+      display: inline-block;
+    }
+    .search-btn {
+      display: none;
+    }
+  }
 }
 
 /******************
@@ -388,6 +427,15 @@ input[type='text']:focus {
   }
 }
 
+@media screen and (max-width: $break-small){
+  .footer {
+    width: 100% !important;
+    //text-align: left;
+    li {
+     padding: 20px;
+    }
+  }
+}
 /******************
 *** MAIN PAGE 
 *******************/
@@ -397,6 +445,7 @@ input[type='text']:focus {
   .addthis_toolbox {
     float: right;
     vertical-align: top;
+    width: 200px;
   }
 
   // Hacky
@@ -405,10 +454,15 @@ input[type='text']:focus {
       margin-left: -32px;
     }
 
-    .location {
+    .location-name {
       color: $text-dark;
+      display: inline-block;
       text-align: left;
-      margin: 0 0 -5px 20px;
+      margin: 0 0 -5px 5px;
+    }
+
+    .location-place {
+      display: inline-block;
     }
 
     .crowd-visuals {
@@ -479,22 +533,35 @@ input[type='text']:focus {
     @include page-element;
 
     .visualize-tagline {
-      text-align: left;
       margin: 0 auto;
     }
 
     h3 {
       text-align: center;
-      //margin: 0 0 0 160px;
     }
 
     h3:nth-child(2) {
       margin: 0 0 0 26%;
     }
-
   }
 }
 
+@media screen and (max-width: $break-small){
+  #main-page {
+
+    .spots-tagline {
+      display: none;
+    }
+    .visualize-tagline {
+      margin: 10px !important;
+    }
+   .addthis_toolbox {
+      float: none;
+      width: 200px;
+      margin: 0 auto;
+    }
+  }
+}
 
 /******************
 *** Listings Page 
