Show map at bottom on mobile.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -872,6 +872,12 @@ input[type='text']:focus {
         width: 95%;
       }
     }
+
+    .side-col {
+      float: none;
+      margin: 10px 0 0 10px;
+      position: relative;
+    }
   }
 }
 
