Left align title bar.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -772,7 +772,7 @@ input[type='text']:focus {
     }
 
     .title-bar {
-      text-align: center;
+      //text-align: center;
 
       .top {
         height: 120px;
