Uppercase type of spot on listings page.

--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -3,7 +3,7 @@
     <div class="main-col">
       <div class="top">
         <img class="b4cm-icon" ng-src="../images/b4cm-icon-{{listings.type | lowercase}}.png">
-        <h2 class="listing-type">{{listings.type}}</h2>
+        <h2 class="listing-type">{{listings.type | uppercase}}</h2>
         <h3 class="listing-location">{{listings.displayAddress}}</h3>
       </div>
       <div class="bottom">
