Add current time marker image before current time.  Due to question of what the image was doing in the crowdgraph.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1509,6 +1509,12 @@ input[type='text']:focus {
   width: 80%;
   color: $acc-dark;
 
+  .current-time-marker {
+    width: 20px;
+    height: 20px;
+    margin-top: -5px;
+  }
+
   .current-time {
     display: inline-block;
     padding-right: 10px;
