--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -75,6 +75,7 @@
 
   <div class="visualize">
     <div class="crowd-factor">
+      <img class="current-time-marker" src="../images/star-icon.png">
       <h4 class="current-time">Current Time: <span class="time {{current_cflabel | lowercase}}">{{current_day}}, {{current_hour}}:{{current_minutes}} {{current_meridiem}}</span></h4>
       <h5 class="watch-count">{{watch_count}} Watches</h5>
       <button type="button" class="btn" ng-click="addWatch()">Add Crowd Watch</button>
