--- a/app/views/signin.html
+++ b/app/views/signin.html
@@ -16,7 +16,7 @@
         </div>
       </div>
       <div class="control-group">
-        <div class="controls">
+        <div class="sign-in-btn controls">
           <button type="submit" class="btn" ng-click="signIn('email')">Sign In</button>
         </div>
       </div>
