--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -22,7 +22,7 @@
         </div>
       </div>
       <div class="control-group">
-        <div class="controls">
+        <div class="sign-up-btn controls">
           <button type="submit" class="btn" ng-click="signup()">Sign Up</button>
         </div>
       </div>
