A little more style.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1282,7 +1282,7 @@ input[type='text']:focus {
 
     .b4cm-signup, .third-party-signup {
       width: 100%;
-      padding: 0px;
+      padding: 0 0 0 5px;
 
       h4 {
         margin-left: 50px;
