--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -379,7 +379,7 @@ input[type='text']:focus {
   .navbar-inner {
     width: 100%;
     height: 110px;
-    text-align: center;
+    text-align: left;
 
     .login {
       display: block;
@@ -389,7 +389,7 @@ input[type='text']:focus {
         float: none !important;
         //margin-top: 45px;
         //margin-left: 27%;
-        width: 50%;
+        width: 100%;
         margin: 45px auto 0 auto !important;
       }
     }
@@ -398,7 +398,7 @@ input[type='text']:focus {
     }
     .brand {
       width: 100%;
-      margin-left: -20px;
+      margin-left: -16px;
       margin-bottom: 10px;
     }
     .search-icon {
@@ -1312,6 +1312,8 @@ input[type='text']:focus {
 /******************
 *** Sign In Page 
 *******************/
+// TODO: merge this with sign-up
+// since already overlap and so similar
 #sign-in {
   
   .login-method {
