Hide review part if no reviews on spot page.  Shrink text on mobile version.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1199,6 +1199,10 @@ input[type='text']:focus {
     .review-nums {
       width: 150px;
     }
+
+    .no-review {
+      font-size: 15px;
+    }
   }
 }
 /******************
