--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -149,8 +149,8 @@
       <hr ng-hide="noReviews">
 
       <div class="review-list">
-        <h2 ng-show="noReviews">No Reviews - Be the first!</h2>
-        <div class="review" ng-repeat="review in spot.reviews">
+        <h2 ng-show="noReviews" class="no-review">No Reviews - Be the first!</h2>
+        <div ng-hide="noReviews" class="review" ng-repeat="review in spot.reviews">
           <div class="user">
             <img ng-src="{{review.author.pic}}">
             <h5 class="title">{{review.author.name}}</h5>
