Mobilize add-review page.

--- a/app/views/addReview.html
+++ b/app/views/addReview.html
@@ -21,14 +21,14 @@
     </div>
 
     <div class="control-group">
-      <label class="control-label" for="inputStars">Stars</label>
+      <label class="control-label" for="inputStars">Stars:</label>
       <div class="controls">
         <select class="rating-select" ng-model="rating" ng-options="rating.label for rating in RATINGS"></select>     
       </div>
     </div>
 
     <div class="control-group">
-      <label class="control-label" for="inputWriteup">Write up</label>
+      <label class="control-label" for="inputWriteup">Write up:</label>
       <div class="controls">
         <textarea id="inputWriteup" placeholder="Your review" ng-model="writeup"></textarea>
       </div>
@@ -36,7 +36,7 @@
 
     <div class="control-group add-rev-btn">
       <div class="controls">
-        <button type="submit" class="btn" ng-click="addReview()">Add Review</button>
+        <button type="submit" class="btn" ng-click="addReview()">Add Review:</button>
       </div>
     </div>
   </form>
