--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1558,7 +1558,8 @@ input[type='text']:focus {
 }
 
 @media screen and (max-width: $break-small){
-  #add-watch-page {
+  #add-watch-page,
+  #add-review-page {
     text-align: left;
 
     .control-label {
