Fix semicolon in wrong places.

--- a/app/views/addReview.html
+++ b/app/views/addReview.html
@@ -6,7 +6,7 @@
   <form class="form-horizontal">
 
     <div class="control-group">
-      <label class="control-label">Type of Spot</label>
+      <label class="control-label">Type of Spot:</label>
       <div class="controls">
         <label class="checkbox inline">
           <input type="checkbox" id="revTypeFood" ng-model="food" value="food">Food
@@ -36,7 +36,7 @@
 
     <div class="control-group add-rev-btn">
       <div class="controls">
-        <button type="submit" class="btn" ng-click="addReview()">Add Review:</button>
+        <button type="submit" class="btn" ng-click="addReview()">Add Review</button>
       </div>
     </div>
   </form>
